# fu_rec_helper

./: LICENSE  README.md  about.py  addending.py  app.py  basic_usage.py  constants.py  covered_recs.py  csv_to_parquet.py  dashboard.py  data_explore.ipynb  faq.md  field_guide.py  how_to_recommend.py  launch.json  mapping_diff.py  mr_pelvis.py  multiple_recs.py  playground.ipynb  pyproject.toml  recommendables.py  requirements.txt  setup.sh  tip_sheet_faq.py  trainee_workflow.py  training.py  use_fup_tool.py  utils.py  vid_add_toolbar.py  vid_basic.py  vid_multiple.py  vid_recommend_consult.py  vid_report_code.py  vid_signing_list.py  what_happens.py
.streamlit/: config.toml
data/: body_part_modality_laterality_recommendable.csv  body_part_modality_laterality_recommendable.parquet  body_part_order.json  modality_mappings.csv  modality_mappings.parquet  modality_order.json  recommendables.csv  recommendables.parquet  recommendables_with_category_region.csv  report_code_info.csv  report_codes.csv  report_codes.parquet
videos/: pitfalls.vtt  tip_sheet.vtt
